@@ -391,12 +391,14 @@ macro(generate_versionfile)
 		"export SYNERGY_VERSION_MAJOR=\"${SYNERGY_VERSION_MAJOR}\"\n"
 		"export SYNERGY_VERSION_MINOR=\"${SYNERGY_VERSION_MINOR}\"\n"
 		"export SYNERGY_VERSION_PATCH=\"${SYNERGY_VERSION_PATCH}\"\n"
+		"export SYNERGY_VERSION_BUILD=\"${SYNERGY_VERSION_BUILD}\"\n"
 		"export SYNERGY_VERSION_STAGE=\"${SYNERGY_VERSION_STAGE}\"\n")
 	elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 		FILE(WRITE ${CMAKE_BINARY_DIR}/version.bat
 		"SET SYNERGY_VERSION_MAJOR=${SYNERGY_VERSION_MAJOR}\n"
 		"SET SYNERGY_VERSION_MINOR=${SYNERGY_VERSION_MINOR}\n"
 		"SET SYNERGY_VERSION_PATCH=${SYNERGY_VERSION_PATCH}\n"
+		"SET SYNERGY_VERSION_BUILD=${SYNERGY_VERSION_BUILD}\n"
 		"SET SYNERGY_VERSION_STAGE=${SYNERGY_VERSION_STAGE}\n")
 	endif()
 endmacro(generate_versionfile)
